Velcro test First SandBox/src/objects/SFDC_Partner_Communication__c.object
<CustomObject>
    <description>Stores important information such as news items, product launches, and events. Optionally attach an image and URL for more details.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_End_Date__c</fullName>
        <label>Content End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Image__c</fullName>
        <formula>IF(Image_Resource_ID__c &lt;&gt; &quot;&quot;,  	HYPERLINK(URL__c,  		IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Image_Resource_ID__c, &quot;View Content&quot;, 100,150 )), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Start_Date__c</fullName>
        <label>Content Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Active__c</fullName>
        <formula>NOW() -  Content_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Resource_ID__c</fullName>
        <description>The SFDC resource id, most likely to an image stored in the documents tab. Cut and paste from the document URL when viewing the document.</description>
        <label>Image Resource ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News Item</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL for additional or relevant information.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Partner Communication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Content_Image__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>